@@ -1,3 +1,6 @@
+2006-03-23 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
+	* On behalf of Ralf Hettinger: three new functions importRecords_checkMail, importRecords_checkImportDublettes and importRecords_makeName for more filtering of the imported CSV values.
+
 2006-03-19 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
 	* Fix bugtracker issue 2924.
 	* Fix bugtracker issue 2925.
